dns_network_policy_pod_service_access/nginx_aishibuya_tsutaya_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nginx
    shibuya-location: tsutaya
  name: nginx-tsutaya
  namespace: aishibuya
spec:
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
    - name: creditizens-aishibuya-custom-message
      mountPath: /usr/share/nginx/html/
  volumes:
  - name: creditizens-aishibuya-custom-message
    configMap:
      name: aishibuya-tsutaya-message
