dns_network_policy_pod_service_access/nginx_creditizens_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: creditizens
spec:
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
    - name: creditizens-custom-message
      mountPath: /usr/share/nginx/html/
  volumes:
  - name: creditizens-custom-message
    configMap:
      name: creditizens-message
