dns_network_policy_pod_service_access/nginx_normal_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: nginx
spec:
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
    - name: custom-message
      mountPath: /usr/share/nginx/html/
  volumes:
  - name: custom-message
    configMap:
      name: normal-nginx-message
