dns_network_policy_pod_service_access/hachiko-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: hachiko-service
  namespace: aishibuya
spec:
  ports:
  - name: access-hachiko
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    shibuya-location: hachiko
  type: ClusterIP
